alalacampo/components/Contact/Contact.module.scss
@import "../../styles/app.scss";

.contact {
  padding-bottom: 8rem;
  padding-top: 6rem;
  margin-top: 2rem;
  background-color: $primary;
  clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 10%);

  @media only screen and (max-width: 600px) {
    clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 3%);
  }

  > div {
    max-width: 1100px;
    margin-left: auto;
    margin-right: auto;

    > p {
      font-size: 2rem;
      margin-bottom: 3rem;

      @media only screen and (max-width: 600px) {
        margin-left: 15px;
      }
    }
  }
}

.gridContainer {
  display: grid;
  grid-template-columns: 55% 35%;
  column-gap: 8rem;

  @media only screen and (max-width: 600px) {
    grid-template-columns: 80%;
    place-content: center;
  }
}

.form {
  @media only screen and (max-width: 600px) {
    margin-bottom: 3rem;
  }
}

.form__group {
  position: relative;
  padding: 15px 0 0;
  margin-top: 20px;
}

.form__field {
  font-family: inherit;
  width: 100%;
  border: 0;
  border-bottom: 2px solid black;
  outline: 0;
  font-size: 1.3rem;
  padding: 5px 0;
  background: transparent;
  transition: border-color 0.2s;

  &::placeholder {
    color: transparent;
  }

  &:placeholder-shown ~ .form__label {
    font-size: 1.3rem;
    cursor: text;
    top: 20px;
  }
}

.form__label {
  position: absolute;
  top: 0;
  display: block;
  transition: 0.2s;
  font-size: 1rem;
}

.form__field:focus {
  ~ .form__label {
    position: absolute;
    top: 0;
    display: block;
    transition: 0.2s;
    font-size: 1rem;
    color: $secondary;
    font-weight: 700;
  }
  padding-bottom: 6px;
  font-weight: 700;
  border-width: 3px;
  border-image: linear-gradient(to right, $secondary, $secondary);
  border-image-slice: 1;
}
/* reset input */
.form__field {
  &:required,
  &:invalid {
    box-shadow: none;
  }
}

.email {
  font-size: 1.5rem;

  @media only screen and (max-width: 600px) {
    grid-column: 1/-1;
  }

  > p {
    font-size: 1.2rem;
  }

  div {
    display: flex;
    align-items: center;
    gap: 1rem;

    margin-top: 2rem;

    span {
      color: $secondary;
    }
  }
}

.button_container {
  display: flex;
  justify-content: flex-end;

  button {
    padding: 0.5rem;
    text-decoration: none;
    border-radius: 0.3rem;
    border: 0;
    background: $secondary;
    color: white;
    font-size: 1.2rem;
    letter-spacing: 0.1rem;
    margin-top: 2rem;
    width: 40%;
    cursor: pointer;
    transition: all 0.2s ease-in-out;

    &:hover {
      background-color: #3c9145;
    }
  }
}

